# TregorVR

./: .cursorignore  .gitignore  README.md  STEREO_VISION_PIPELINE.md  main.md
kalibr_catkin/: chessboard_template.yaml  kalibr_pipeline.sh  probe_chessboard_bag.py  source_ws.bash
kalibr_catkin/src/tregor_kalibr/: CMakeLists.txt  package.xml
kalibr_catkin/src/tregor_kalibr/launch/: ov9281_stereo_record.launch  rtabmap_ov9281_rectified.launch  stereo_rectify_bridge.launch
kalibr_catkin/src/tregor_kalibr/scripts/: lock_uvc.sh  preview_saver.py  run_usb_cam0_locked.sh  run_usb_cam_delayed.sh  stereo_rectify_rtabmap_bridge.py
kalibr_data/: my_calib_75mm-camchain.yaml  my_calib_75mm-orbslam3-rectify-input.yaml  my_calib_75mm-orbslam3-stereo-rectified.yaml  my_calib_75mm-results-cam.txt
tools/chessboard_second_screen/: chessboard_second_screen.py  requirements.txt
tools/orb_slam3/: CMakeLists.txt  README.md  build_windows.ps1  export_orbslam3_config.py  live_stereo_rectified.cpp  requirements.txt  run_live_windows.ps1  run_live_wsl.sh  uvc_ov9281_modes.sh
tools/stereo_rectify_preview/: rectified_stereo_preview.py  requirements.txt
