<?xml version="1.0"?>
<package format="2">
  <name>tregor_kalibr</name>
  <version>0.0.1</version>
  <description>OV9281 stereo capture and preview for Kalibr</description>
  <maintainer email="tregor@example.com">tregor</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>rosbag</exec_depend>
</package>
